//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated from a template.
//
//     Manual changes to this file may cause unexpected behavior in your application.
//     Manual changes to this file will be overwritten if the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace ticksy
{
    using System;
    using System.Collections.Generic;
    
    public partial class TimeEntry
    {
        public long TimeEntryId { get; set; }
        public long TaskId { get; set; }
        public System.DateTime StartTime { get; set; }
        public System.DateTime EndTime { get; set; }
        public string Description { get; set; }
        public System.DateTime CreatedAt { get; set; }
    
        public virtual Task Task { get; set; }
    }
}
